--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+.chatbox {
+  height: 377px;
+  width: 241px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.chatbox .rectangle {
+  background-color: white;
+  border-radius: 33px;
+  height: 377px;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 241px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.frame {
+  background-color: #8cc4f8;
+  height: 104px;
+  width: 241px;
+  
 }
