--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   height: 377px;
   width: 241px;
 }
+body{
+  background-color: black;
+}
 
 .chatbox .rectangle {
   background-color: white;
@@ -16,5 +19,20 @@
   background-color: #8cc4f8;
   height: 104px;
   width: 241px;
-  
+  position: absolute;
+  border-radius: 33px;
 }
+.image {
+  height: 424px;
+  width: 800px;
+}
+
+.image .img {
+  height: 424px;
+  left: 0;
+  object-fit: cover;
+  position: fixed;
+  top: 0;
+  width: 534px;
+}
+
