--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,114 @@
 .chatbox {
-  height: 377px;
-  width: 241px;
-}
-body{
-  background-color: black;
-}
-
-.chatbox .rectangle {
-  background-color: white;
-  border-radius: 33px;
-  height: 377px;
-  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: white;
   position: fixed;
   top: 0;
-  width: 241px;
+  right: 0;
+  z-index: 2;
 }
+
+.chatbox-body {
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 96.68px)
+}
+
+.footer {
+  padding: 10px;
+  display: flex;
+}
+
+.closed {
+  display: none;
+}
+
+.input {
+  width: 100%;
+  background: grey;
+  font-size: 20px;
+}
+
+.message { 
+  font-size: 18px;
+  padding: 5px;
+  border-radius: 10px;
+  display: block;
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+.in {
+  background: greenyellow;
+  margin-left: auto;
+}
+
+.out {
+  background: #8cc4f8;
+}
+
+
+.open {
+  display: block;
+}
+
+.chatbutton {
+  position: fixed;
+  fill: #8cc4f8;
+  width: 100%;
+  height: auto;
+  max-width: 75px;
+  cursor: pointer;
+  right: 15px;
+  bottom: 15px;
+  z-index: 1;
+}
+
+
+
 .frame {
   background-color: #8cc4f8;
-  height: 104px;
-  width: 241px;
-  position: absolute;
-  border-radius: 33px;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: left;
+
 }
-.image {
-  height: 200px;
-  width: 200px;
+
+.exit {
+  font-weight: 900;
+  font-size: 2rem;
+ fill: white;
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  cursor: pointer;
+}
+
+.logo {
+  width: 100%;
+  height: auto;
+  max-width: 250px;
+}
+
+.messages {
+  flex: 1 0 85%;
+  padding: 5px 10px;
+  overflow-y: auto;
+}
+
+.frame Logo{
+  height: 100px;
 }
 
 .cls-1 {
   fill: white
 }
 
-.chatbox img {
-  height: 90px;
-  left: 0;
-  object-fit: cover;
-  position: fixed;
-  top: 0;
-  width: 200px;
+@media screen and (min-width: 769px) {
+  .chatbox {
+    width: 400px;
+    height: 600px;
+
+  }
 }
 
